Recâblage du calcul (vue analyse) vers le serveur java plutôt que sur le front JS
